Fix date spacing

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -343,3 +343,7 @@ body {
     font-size: 15px;
   }
 }
+
+.daite {
+  margin: 0px 5px;
+}
